Atualização pasta web e bg

--- a/web/notas/Notas.html
+++ b/web/notas/Notas.html
@@ -44,6 +44,12 @@ h3 {
 
 	<p><strong>Bolso Quadridimensional</strong>: referência ao personagem Doraemon, do mangá de mesmo nome, que possui um bolso quadridimensional em sua barriga, de onde tira uma infinidade de dispositivos do futuro.</p>
 	
+<h3>Dia de Graças ao Trabalho</h3>
+	
+	<p><strong>Quimonos forrados são roupas para plebeus</strong>: Krauss diz isso porque os quimonos forrados, revestidos de algodão “褞袍” eram usados pelos serviçais que serviam a Hatamoto, até que se espalharam e ficou popular entre as pessoas.</p>	
+	<p><strong>Itoya</strong>: famosa papelaria localizada em Ginza.</p>		
+	<p><strong>Oujun</strong>: no original “王潤” referência a cápsulas “皇潤” da Everlife.</p>		
+	
 <h3>Festa do Chá de Quem?</h3>
 	
 	<p><strong>Akebia</strong>: é um arbusto nativo de regiões do Japão, da China e da Coreia. O seu nome popular é trepadeira-chocolate.  Sua polpa doce e suculenta se assemelha a uma pitaia.</p>
@@ -61,14 +67,13 @@ h3 {
 	<p><strong>Maravilhoso subsolo da loja de departamentos</strong>: o original utiliza “でぱちか”, abreviação de 「デパ地下」, literalmente subsolo de lojas de departamento, onde costumam ser vendidos mantimentos. O nome começou a ser utilizado a partir dos anos 2000.</p>
 	<p><strong>Hotcake</strong>: embora muito traduzido como "panqueca", e de fato é — ao menos nos Estados Unidos — as 「ホットケーキ」 no Japão são diferentes das 「 パンケーキ 」. As hotcake, no Japão, são preparadas com mais açúcar e leite, deixando elas mais fofas e podem ser comidas como doce, enquanto as panquecas são salgadas.<br><br>Para detalhes técnicos, vejam a explicação da Chito-san em Flying With ;)</p>
 	<p><strong>Quartier Latin</strong>: bairro de Paris.</p>
-	<p><strong>Warp Portal</strong>: 「ワープポータル」habilidade de <em>Ragnarok</em>.
-	<p><strong>Grupo de 98</strong>: ?????.</p>
-	</p>
+	<p><strong>Warp Portal</strong>: 「ワープポータル」habilidade de <em>Ragnarok</em>.</p>
 
 <h3>Carta de dia dos Namorados</h3>
 	<p><strong>Omikuji</strong>: uma “loteria da sorte” onde se retira um amuleto da sorte feito em papel, geralmente recebido em santuários xintoístas.</p>
 	<p><strong>Kotatsu</strong>: mesa baixa com um pequeno aquecedor elétrico embutido no centro e cobertor para se aquecer no inverno.</p>
-
+	<p><strong>Dàhán</strong>: 24º período solar do calendário do Leste asiático, tendo início o Sol atinge a longitude celestial 300° e encerra-se na longitude 315°. Pelo calendário Gregoriano, começa em 20 de janeiro e vai até 4 de fevereiro.</p>
+	
 <h3>Cornelia, a Nova Sacerdotisa</h3>	
 	
 	<p><strong>Vernáculo da Corte</strong>: no inglês "court language", no original 「法語」. Literalmente "sermão budista". Em chinês o termo é utilizado para se referir ao idioma francês.
